[package]
name = "data_structure"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "build_in_hash"
path = "chapter_6_hash/build_in_hash.rs"

[[bin]]
name = "array_hash"
path = "chapter_6_hash/array_hash.rs"

[[bin]]
name = "hash_map_chaining"
path = "chapter_6_hash/hash_map_chaining.rs"

[[bin]]
name = "hash_map_open_address"
path = "chapter_6_hash/hash_map_open_address.rs"
[dependencies]
