[package]
name = "data_structure"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "build_in_hash"
path = "chapter_6_hash/build_in_hash.rs"

[[bin]]
name = "array_hash"
path = "chapter_6_hash/array_hash.rs"

[[bin]]
name = "hash_map_chaining"
path = "chapter_6_hash/hash_map_chaining.rs"

[[bin]]
name = "hash_map_open_address"
path = "chapter_6_hash/hash_map_open_address.rs"

[[bin]]
name = "binary_tree"
path = "chapter_7_tree/binary_tree.rs"
[[bin]]
name = "binary_tree_bfs"
path = "chapter_7_tree/binary_tree_bfs.rs"


[[bin]]
name = "binary_tree_dfs"
path = "chapter_7_tree/binary_tree_dfs.rs"

[[bin]]
name = "find_diff"
path = "chapter0_leetcode/_389_find_diff.rs"

[[bin]]
name = "count_bits"
path = "chapter0_leetcode/_383_count_bits.rs"

[[bin]]
name = "binary_tree_dfs_iter"
path = "chapter_7_tree/binary_tree_dfs_iter.rs"

[[bin]]
name = "binary_search_tree"
path = "chapter_7_tree/binary_search_tree.rs"


[[bin]]
name = "remove_dup"
path = "chapter0_leetcode/_1047_remove_dup.rs"

[[bin]]
name = "product_except_self"
path = "chapter0_leetcode/_238_product_except_self.rs"

[[bin]] 
name = "majority_element"
path = "chapter0_leetcode/_169_majority_element.rs"

[[bin]]
name = "help"
path = "chapter_8_heap/heap.rs"

[[bin]]
name = "my_heap"
path = "chapter_8_heap/my_heap.rs"

[[bin]]
name = "prefix_string"
path = "chapter0_leetcode/_1961_prefix_string_.rs"

[dependencies]
